update rhythm to be smaller and fix code scrollbars

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -15,22 +15,17 @@ html * {
   box-sizing: border-box;
 }
 
-body::-webkit-scrollbar,
-.gatsby-highlight pre::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 11px;
 }
-body::-webkit-scrollbar-track,
-.gatsby-highlight pre::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   background: var(--brand-bg);
 }
-body::-webkit-scrollbar-thumb,
-.gatsby-highlight pre::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   background-color: var(--brand-action) ;
   border-radius: 6px;
   border: 3px solid var(--brand-bg);
 }
-
-
 
 body,
 .gatsby-highlight pre {
@@ -131,7 +126,7 @@ body {
   font-family: 'Andika', sans-serif;
   font-weight: 400;
   line-height: 1.65;
-  color: #333;
+  color: var(--brand-fg);
 }
 
 p {margin-bottom: 1.15rem;}
@@ -145,15 +140,15 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   margin-top: 0;
-  font-size: 3.052em;
+  font-size: 1.802em;
 }
 
-h2 {font-size: 2.441em;}
+h2 {font-size: 1.602em;}
 
-h3 {font-size: 1.953em;}
+h3 {font-size: 1.424em;}
 
-h4 {font-size: 1.563em;}
+h4 {font-size: 1.266em;}
 
-h5 {font-size: 1.25em;}
+h5 {font-size: 1.125em;}
 
-small, .text_small {font-size: 0.8em;}
+small, .text_small {font-size: 0.889em;}
